AWS-EKS/02. vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block                       = "10.0.0.0/16"
  instance_tenancy                 = "default"
  enable_dns_support               = true
  enable_dns_hostnames             = true
  enable_classiclink               = false
  enable_classiclink_dns_support   = false
  assign_generated_ipv6_cidr_block = false

  tags = {
    Name = "vpc"
  }
}


# references: https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc
